--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Your Landing Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Comic Sans, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
@@ -43,9 +43,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Website</h1>
+        <h1>Welcome to My Website</h1>
         <p>This site is for Nicole Fong</p>
-        <a href="#" class="cta-button">Get Started</a>
+        <a href="#" class="cta-button">Resume</a>
     </div>
 </body>
 </html>
