--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <h1>Welcome to My Website</h1>
         <p>This site is for Nicole Fong</p>
         <a href="#" class="cta-button">Resume</a>
+            <a href="https://github.com/NFong1122/NFong1122.github.io/blob/main/Resume%20NF%20(1).pdf" target="_blank">View My CV</a> 
     </div>
 </body>
 </html>
