--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #add8e6; /* Pastel blue */
+            background-color: 	#89CFF0; /* Baby Blue */
         }
         .container {
             max-width: 800px;
