--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: 	#A7C7E7; /* Pastel Blue */
+            background-color: 	#F0FFFF; /* Azure */
         }
         .container {
             max-width: 800px;
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Website</h1>
+        <h1>Welcome to My Website</h1>
         <p> This site is for Nicole Fong</p>
         <div class="link-container">
             <a href="https://github.com/NFong1122/NFong1122.github.io/blob/main/Resume%20NF%20(1).pdf" class="link" target="_blank">View Resume</a>
