--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: 	#F0FFFF; /* Azure */
+            background-color: 	#89CFF0; /* Baby Blue */
         }
         .container {
             max-width: 800px;
@@ -51,7 +51,7 @@
             border: 2px solid #ff7f50; /* Orange */
             border-radius: 5px;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 24px;
             transition: color 0.3s ease, border-color 0.3s ease;
         }
         .link:hover {
